feat(desktop): modernize UI with design system, cards, and dark theme
Refresh the JavaFX app with brand styling, icon sidebar shell, service ticket
card list and filter chips, inventory/customer/dashboard card views, themed
dialogs, WhatsApp icon buttons, and backend updatedAt for closed-ticket sorting.